quick font fix + update evil manager

--- a/data/movies.toml
+++ b/data/movies.toml
@@ -95,6 +95,10 @@ imdb = "tt1409124"
 name = "DownWard Spiral"
 year = "2008"
 [[movies]]
+imdb = "tt0780504"
+name = "Drive"
+year = "2011"
+[[movies]]
 imdb = "tt0080179"
 name = "Drunken Master"
 year = "1978"
