--- a/data/sugar_crystals.toml
+++ b/data/sugar_crystals.toml
@@ -1,4 +1,3 @@
-# sugarcrystals
 [[crystal]]
 url = "https://www.pornpics.com/pornstars/vicky-love/"
 name = "Vicky Love"
@@ -13,7 +12,7 @@ url = "https://www.pornpics.com/pornstars/ariana-van-x/"
 name = "Ariana Van X"
 [[crystal]]
 url = "https://www.pornpics.com/pornstars/lucy-li/"
-name = "Lucy Li Nude"
+name = "Lucy Li"
 [[crystal]]
 url = "https://www.pornpics.com/pornstars/casey-calvert/"
 name = "Casey Calvert"
