--- a/data/sugar_crystals.toml
+++ b/data/sugar_crystals.toml
@@ -1201,3 +1201,99 @@ name = "Zeina Heart"
 [[crystal]]
 url = "https://www.pornpics.com/pornstars/scarlett-mae/"
 name = "Scarlett Mae"
+[[crystal]]
+url = "https://www.pornpics.com/pornstars/sierra-nevadah/"
+name = "Sierra Nevadah"
+[[crystal]]
+url = "https://www.pornpics.com/pornstars/arwen-gold/"
+name = "Arwen Gold"
+[[crystal]]
+url = "https://www.pornpics.com/pornstars/henessy/"
+name = "Henessy"
+[[crystal]]
+url = "https://www.pornpics.com/?q=scarlet+domingo"
+name = "Scarlet Domingo"
+[[crystal]]
+url = "https://www.pornpics.com/pornstars/vika-lita/"
+name = "Vika Lita"
+[[crystal]]
+url = "https://www.pornpics.com/pornstars/nathaly-cherie/"
+name = "Nathaly Cherie"
+[[crystal]]
+url = "https://www.pornpics.com/pornstars/sidra-sage/"
+name = "Sidra Sage"
+[[crystal]]
+url = "https://www.pornpics.com/pornstars/hayley-marie-coppin/"
+name = "Hayley Marie Coppin"
+[[crystal]]
+url = "https://www.pornpics.com/pornstars/chanel-fenn/"
+name = "Chanel Fenn"
+[[crystal]]
+url = "https://www.pornpics.com/?q=jojo+austin"
+name = "Jojo Austin"
+[[crystal]]
+url = "https://www.pornpics.com/pornstars/stacey-massey/"
+name = "Stacey Massey"
+[[crystal]]
+url = "https://www.pornpics.com/pornstars/molly-cavalli/"
+name = "Molly Cavalli"
+[[crystal]]
+url = "https://www.pornpics.com/pornstars/mira-cuckold/"
+name = "Mira Cuckold"
+[[crystal]]
+url = "https://www.pornpics.com/pornstars/marina-lotar/"
+name = "Marina Lotar"
+[[crystal]]
+url = "https://www.pornpics.com/pornstars/yurizan-beltran/"
+name = "Yurizan Beltran"
+[[crystal]]
+url = "https://www.pornpics.com/pornstars/kiley-jay/"
+name = "Kiley Jay"
+[[crystal]]
+url = "https://www.pornpics.com/pornstars/noelle-easton/"
+name = "Noelle Easton"
+[[crystal]]
+url = "https://www.pornpics.com/pornstars/dyanna-lauren/"
+name = "Dyanna Lauren"
+[[crystal]]
+url = "https://www.pornpics.com/pornstars/little-caprice/"
+name = "Little Caprice"
+[[crystal]]
+url = "https://www.pornpics.com/pornstars/dolly-leigh/"
+name = "Dolly Leigh Nude XXX Pics - PornPics.com"
+[[crystal]]
+url = "https://www.pornpics.com/pornstars/izzy-bell/"
+name = "Izzy Bell"
+[[crystal]]
+url = "https://www.elitebabes.com/model/hollie/"
+name = "Hollie"
+[[crystal]]
+url = "https://www.pornpics.com/pornstars/bonnie-rotten/"
+name = "Bonnie Rotten"
+[[crystal]]
+url = "https://www.pornpics.com/pornstars/jillian-janson/"
+name = "Jillian Janson"
+[[crystal]]
+url = "https://www.pornpics.com/pornstars/jade-kush/"
+name = "Jade Kush"
+[[crystal]]
+url = "https://www.pornpics.com/pornstars/polliana/"
+name = "Polliana"
+[[crystal]]
+url = "https://www.pornpics.com/pornstars/ashley-lane/"
+name = "Ashley Lane"
+[[crystal]]
+url = "https://www.pornpics.com/pornstars/harlow-harrison/"
+name = "Harlow Harrison"
+[[crystal]]
+url = "https://www.pornpics.com/pornstars/sarah-vandella/"
+name = "Sarah Vandella"
+[[crystal]]
+url = "https://www.pornpics.com/pornstars/zoe-doll/"
+name = "Zoe Doll"
+[[crystal]]
+url = "https://www.pornpics.com/pornstars/tina-kay/"
+name = "Tina Kay"
+[[crystal]]
+url = "https://www.pornpics.com/pornstars/cecilia-de-lys/"
+name = "Cecilia De Lys"
