--- a/data/sugar_crystals.toml
+++ b/data/sugar_crystals.toml
@@ -1260,7 +1260,7 @@ url = "https://www.pornpics.com/pornstars/little-caprice/"
 name = "Little Caprice"
 [[crystal]]
 url = "https://www.pornpics.com/pornstars/dolly-leigh/"
-name = "Dolly Leigh Nude XXX Pics - PornPics.com"
+name = "Dolly Leigh"
 [[crystal]]
 url = "https://www.pornpics.com/pornstars/izzy-bell/"
 name = "Izzy Bell"
@@ -1297,3 +1297,99 @@ name = "Tina Kay"
 [[crystal]]
 url = "https://www.pornpics.com/pornstars/cecilia-de-lys/"
 name = "Cecilia De Lys"
+[[crystal]]
+url = "https://www.pornpics.com/pornstars/jamie-jett/"
+name = "Jamie Jett"
+[[crystal]]
+url = "https://www.pornpics.com/pornstars/lumi-ray/"
+name = "Lumi Ray"
+[[crystal]]
+url = "https://www.pornpics.com/pornstars/tawny-swain/"
+name = "Tawny Swain"
+[[crystal]]
+url = "https://www.pornpics.com/pornstars/renata-daninsky/"
+name = "Renata Daninsky"
+[[crystal]]
+url = "https://www.pornpics.com/pornstars/sage-hailong/"
+name = "Sage Hailong"
+[[crystal]]
+url = "https://www.pornpics.com/pornstars/mila-milan/"
+name = "Mila Milan"
+[[crystal]]
+url = "https://www.pornpics.com/?q=elizabeth+hansen"
+name = "Elizabeth Hansen"
+[[crystal]]
+url = "https://www.pornpics.com/pornstars/jenny-hendrix/"
+name = "Jenny Hendrix"
+[[crystal]]
+url = "https://www.pornpics.com/pornstars/nata-lee/"
+name = "Nata Lee"
+[[crystal]]
+url = "https://www.pornpics.com/pornstars/jessica-jaymes/"
+name = "Jessica Jaymes"
+[[crystal]]
+url = "https://www.pornpics.com/pornstars/lily-carter/"
+name = "Lily Carter"
+[[crystal]]
+url = "https://www.pornpics.com/pornstars/audrey-show/"
+name = "Audrey Show"
+[[crystal]]
+url = "https://www.pornpics.com/pornstars/megan-sage/"
+name = "Megan Sage"
+[[crystal]]
+url = "https://www.pornpics.com/pornstars/pepper-xo/"
+name = "Pepper Xo"
+[[crystal]]
+url = "https://www.pornpics.com/pornstars/alexa-nicole/"
+name = "Alexa Nicole"
+[[crystal]]
+url = "https://www.pornpics.com/pornstars/dakoda-brookes/"
+name = "Dakoda Brookes"
+[[crystal]]
+url = "https://www.pornpics.com/pornstars/belle-knox/"
+name = "Belle Knox"
+[[crystal]]
+url = "https://www.pornpics.com/pornstars/olivia-nova/"
+name = "Olivia Nova"
+[[crystal]]
+url = "https://www.pornpics.com/pornstars/capri-anderson/"
+name = "Capri Anderson"
+[[crystal]]
+url = "https://www.pornpics.com/pornstars/nikki-sims/"
+name = "Nikki Sims"
+[[crystal]]
+url = "https://www.pornpics.com/pornstars/savannah-stern/"
+name = "Savannah Stern"
+[[crystal]]
+url = "https://www.pornpics.com/pornstars/blanche-bradburry/"
+name = "Blanche Bradburry"
+[[crystal]]
+url = "https://www.pornpics.com/pornstars/jayla-de-angelis/"
+name = "Jayla De Angelis"
+[[crystal]]
+url = "https://www.pornpics.com/pornstars/kama-oxi/"
+name = "Kama Oxi"
+[[crystal]]
+url = "https://www.pornpics.com/pornstars/michelle-taylor/"
+name = "Michelle Taylor"
+[[crystal]]
+url = "https://www.pornpics.com/pornstars/ria-rodriguez/"
+name = "Ria Rodriguez"
+[[crystal]]
+url = "https://www.pornpics.com/pornstars/skye-west/"
+name = "Skye West"
+[[crystal]]
+url = "https://www.pornpics.com/pornstars/isis-love/"
+name = "Isis Love"
+[[crystal]]
+url = "https://www.pornpics.com/pornstars/lindsey-meadows/"
+name = "lindsey meadows"
+[[crystal]]
+url = "https://www.pornpics.com/pornstars/alex-coal/"
+name = "Alex Coal"
+[[crystal]]
+url = "https://www.pornpics.com/pornstars/dolly-dyson/"
+name = "Dolly Dyson"
+[[crystal]]
+url = "https://www.pornpics.com/pornstars/madi-collins/"
+name = "Madi Collins"
