--- a/data/sugar_crystals.toml
+++ b/data/sugar_crystals.toml
@@ -1393,3 +1393,21 @@ name = "Dolly Dyson"
 [[crystal]]
 url = "https://www.pornpics.com/pornstars/madi-collins/"
 name = "Madi Collins"
+[[crystal]]
+url = "https://www.pornpics.com/pornstars/christiana-cinn/"
+name = "Christiana Cinn"
+[[crystal]]
+url = "https://www.pornpics.com/pornstars/candice-dare/"
+name = "Candice Dare"
+[[crystal]]
+url = "https://www.pornpics.com/pornstars/leigh-raven/"
+name = "Leigh Raven"
+[[crystal]]
+url = "https://www.pornpics.com/pornstars/jessi-gold/"
+name = "Jessi Gold"
+[[crystal]]
+url = "https://www.pornpics.com/pornstars/britney-angel/"
+name = "Britney Angel"
+[[crystal]]
+url = "https://www.pornpics.com/pornstars/jodie-moore/"
+name = "Jodie Moore"
