update evil list

--- a/data/movies.toml
+++ b/data/movies.toml
@@ -15,6 +15,10 @@ imdb = "tt0078788"
 name = "Apocalypse Now"
 year = "1979"
 [[movies]]
+imdb = "tt0472043"
+name = "Apocalypto"
+year = "2006"
+[[movies]]
 imdb = "tt0106308"
 name = "Army of Darkness"
 year = "1992"
@@ -75,6 +79,10 @@ imdb = "tt0094862"
 name = "Child's Play"
 year = "1988"
 [[movies]]
+imdb = "tt0317248"
+name = "City of God"
+year = "2002"
+[[movies]]
 imdb = "tt0088930"
 name = "Clue"
 year = "1985"
@@ -86,6 +94,10 @@ year = "1985"
 imdb = "tt0275277"
 name = "Cowboy Bebop: The Movie"
 year = "2001"
+[[movies]]
+imdb = "tt0103873"
+name = "Dead Alive"
+year = "1992"
 [[movies]]
 imdb = "tt0452608"
 name = "Death Race"
@@ -122,6 +134,10 @@ year = "2009"
 imdb = "tt0092991"
 name = "Evil Dead II"
 year = "1987"
+[[movies]]
+imdb = "tt0082348"
+name = "Excalibur"
+year = "1981"
 [[movies]]
 imdb = "tt0112913"
 name = "Fallen Angels"
@@ -354,6 +370,10 @@ year = "2007"
 imdb = "tt0230600"
 name = "The Others"
 year = "2001"
+[[movies]]
+imdb = "tt1659337"
+name = "The Perks of Being a Wallflower"
+year = "2012"
 [[movies]]
 imdb = "tt0138749"
 name = "The Road to El Dorado"
