--- a/data/sugar_crystals.toml
+++ b/data/sugar_crystals.toml
@@ -1411,3 +1411,18 @@ name = "Britney Angel"
 [[crystal]]
 url = "https://www.pornpics.com/pornstars/jodie-moore/"
 name = "Jodie Moore"
+[[crystal]]
+url = "https://www.pornpics.com/pornstars/kenzie-taylor/"
+name = "Kenzie Taylor"
+[[crystal]]
+url = "https://www.pornpics.com/pornstars/yenifer-chp/"
+name = "Yenifer Chp"
+[[crystal]]
+url = "https://www.pornpics.com/pornstars/kathia-nobili/"
+name = "Kathia Nobili"
+[[crystal]]
+url = "https://www.pornpics.com/pornstars/karlie-montana/"
+name = "Karlie Montana"
+[[crystal]]
+url = "https://www.pornpics.com/pornstars/candee-licious/"
+name = "Candee Licious"
