update evil list

--- a/data/movies.toml
+++ b/data/movies.toml
@@ -255,6 +255,10 @@ imdb = "tt0198781"
 name = "Monsters, Inc."
 year = "2001"
 [[movies]]
+imdb = "tt0071853"
+name = "Monty Python and the Holy Grail"
+year = "1975"
+[[movies]]
 imdb = "tt0485947"
 name = "Mr. Nobody"
 year = "2009"
@@ -343,6 +347,10 @@ imdb = "tt0111361"
 name = "Tammy and the T-Rex"
 year = "1994"
 [[movies]]
+imdb = "tt0075314"
+name = "Taxi Driver"
+year = "1976"
+[[movies]]
 imdb = "tt0101272"
 name = "The Addams Family"
 year = "1991"
@@ -358,6 +366,10 @@ year = "1975"
 imdb = "tt0050212"
 name = "The Bridge on the River Kwai"
 year = "1957"
+[[movies]]
+imdb = "tt1259521"
+name = "The Cabin in the Woods"
+year = "2011"
 [[movies]]
 imdb = "tt0116075"
 name = "The Dentist"
@@ -422,6 +434,10 @@ year = "1988"
 imdb = "tt1183732"
 name = "Tokyo Gore Police"
 year = "2008"
+[[movies]]
+imdb = "tt1964418"
+name = "Tomorrowland"
+year = "2015"
 [[movies]]
 imdb = "tt0100802"
 name = "Total Recall"
