update: sugar_crystals

--- a/data/sugar_crystals.toml
+++ b/data/sugar_crystals.toml
@@ -1426,3 +1426,21 @@ name = "Karlie Montana"
 [[crystal]]
 url = "https://www.pornpics.com/pornstars/candee-licious/"
 name = "Candee Licious"
+[[crystal]]
+url = "https://www.pornpics.com/pornstars/gia-dimarco/"
+name = "Gia Dimarco"
+[[crystal]]
+url = "https://www.pornpics.com/pornstars/lily-larimar/"
+name = "Lily Larimar"
+[[crystal]]
+url = "https://www.pornpics.com/pornstars/katie-jordin/"
+name = "Katie Jordin"
+[[crystal]]
+url = "https://www.pornpics.com/pornstars/desiree-dulce/"
+name = "Desiree Dulce"
+[[crystal]]
+url = "https://www.pornpics.com/pornstars/scarlett-domingo/"
+name = "Scarlett Domingo"
+[[crystal]]
+url = "https://www.pornpics.com/pornstars/nicole-murkovski/"
+name = "Nicole Murkovski"
