--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "ESNext",
     "module": "ESNext",
-    "moduleResolution": "Bundler",
+    "moduleResolution": "NodeNext",
     "checkJs": true,
     "experimentalDecorators": true,
     "baseUrl": "."
