update evil list

--- a/data/movies.toml
+++ b/data/movies.toml
@@ -95,6 +95,10 @@ imdb = "tt0275277"
 name = "Cowboy Bebop: The Movie"
 year = "2001"
 [[movies]]
+imdb = "tt0090555"
+name = "Crocodile Dundee"
+year = "1986"
+[[movies]]
 imdb = "tt0103873"
 name = "Dead Alive"
 year = "1992"
@@ -315,6 +319,10 @@ imdb = "tt0401792"
 name = "Sin City"
 year = "2005"
 [[movies]]
+imdb = "tt0117705"
+name = "Space Jam"
+year = "1996"
+[[movies]]
 imdb = "tt0145487"
 name = "Spider-Man"
 year = "2002"
@@ -355,6 +363,10 @@ imdb = "tt0101272"
 name = "The Addams Family"
 year = "1991"
 [[movies]]
+imdb = "tt0086856"
+name = "The Adventures of Buckaroo Banzai Across the 8th Dimension"
+year = "1984"
+[[movies]]
 imdb = "tt1877830"
 name = "The Batman"
 year = "2022"
@@ -379,6 +391,10 @@ imdb = "tt0083907"
 name = "The Evil Dead"
 year = "1981"
 [[movies]]
+imdb = "tt0439572"
+name = "The Flash"
+year = "2023"
+[[movies]]
 imdb = "tt0061722"
 name = "The Graduate"
 year = "1967"
@@ -390,6 +406,10 @@ year = "2001"
 imdb = "tt0884328"
 name = "The Mist"
 year = "2007"
+[[movies]]
+imdb = "tt1462769"
+name = "The Odd Life of Timothy Green"
+year = "2012"
 [[movies]]
 imdb = "tt0230600"
 name = "The Others"
